--- a/BryanAir/nbproject/project.properties
+++ b/BryanAir/nbproject/project.properties
@@ -28,7 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.mysql-connector-java-8.0.12.jar=C:\\Users\\Marcello\\Desktop\\mysql-connector-java-8.0.12.jar
+file.reference.mysql-connector-java-8.0.12.jar=C:\\Users\\marce\\Downloads\\mysql-connector-java-8.0.12.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
