--- a/BryanAir/nbproject/project.properties
+++ b/BryanAir/nbproject/project.properties
@@ -82,4 +82,4 @@ war.content.additional=
 war.ear.name=${war.name}
 war.name=BryanAir.war
 web.docbase.dir=web
-webinf.dir=web/WEB-INF
+webinf.dir=build/web/WEB-INF
