--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ hs_err_pid*
 *.properties
 *.properties
 *.properties
+BryanAir/nbproject/private/private.properties
+BryanAir/nbproject/private/private.xml
